--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body{
   justify-content:space-between;
   align-items:center;
   min-height:240px;
-  width: 100%;
+  width: 500px;
   gap: 20px;
 }
 
